infra/gateway-routes/http-to-https-redirect.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-to-https
  namespace: argocd
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: eg
      namespace: argocd
      sectionName: http-dev
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: eg
      namespace: argocd
      sectionName: http-argocd
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: eg
      namespace: argocd
      sectionName: http-prod
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
